--- a/source/droppable.css
+++ b/source/droppable.css
@@ -33,9 +33,10 @@
 	h3#droppable_title{position:relative; float: left; width: 100%; height: auto; line-height: 30px; z-index:50; text-align: center; font-size: 30px; font-weight: bold; margin-top:150px; color:#95a5a6;}
 	p#droppable_trigger_input{position:relative; float:left; width: 100%; height: auto; line-height: 30px; z-index: 50; text-align: center; font-size: 20px; color:#ccc; font-weight:bold; margin-top: 30px; cursor: pointer;}
 	/* items */
-	#previews{position: absolute; width: 100%; height: 100%;}
+	#previews{position: absolute; width: 100%; height: 100%; padding:10px;}
 	#droppable .droppable_preview{float: left; width: 10%; height: 200px; padding:10px; z-index:101;}
-	#droppable .droppable_preview .img_wrap{float: left; width: 100%; height: 100px; margin:0 0 10px 0;}
-	#droppable .droppable_preview .img_wrap img{display:block; position: relative; width: 70%; max-height: 100px; margin:0 auto 10px auto;}
-	#droppable .droppable_preview p{float: left; width: 100%; height: 20px; line-height: 20px; font-size:12px; margin-bottom: 10px; overflow: hidden;}
+	#droppable .droppable_preview:hover{background: rgba(255,255,255,1.0); box-shadow: 0px 0 6px rgba(0,0,0,0.3);}
+	#droppable .droppable_preview .img_wrap{position:relative; float: left; width: 100%; height: 100px; margin:0 0 10px 0;}
+	#droppable .droppable_preview .img_wrap img{display:block; position: absolute; top:0; bottom:0; left:0; right:0; width: 70%; max-height: 100px; margin:0 auto 10px auto;}
+	#droppable .droppable_preview p{float: left; width: 100%; height: auto; line-height: 20px; font-size:12px; margin-bottom: 10px; overflow: hidden; text-overflow:ellipsis;}
 	#droppable .droppable_preview a{}
