--- a/source/droppable.css
+++ b/source/droppable.css
@@ -38,5 +38,9 @@
 	#droppable .droppable_preview:hover{background: rgba(255,255,255,1.0); box-shadow: 0px 0 6px rgba(0,0,0,0.3);}
 	#droppable .droppable_preview .img_wrap{position:relative; float: left; width: 100%; height: 100px; margin:0 0 10px 0;}
 	#droppable .droppable_preview .img_wrap img{display:block; position: absolute; top:0; bottom:0; left:0; right:0; width: 70%; max-height: 100px; margin:0 auto 10px auto;}
-	#droppable .droppable_preview p{float: left; width: 100%; height: auto; line-height: 20px; font-size:12px; margin-bottom: 10px; overflow: hidden; text-overflow:ellipsis;}
-	#droppable .droppable_preview a{}
+	#droppable .droppable_preview p{float: left; width: 100%; height: 40px; line-height: 20px; font-size:12px; text-align: center; margin-bottom: 10px; overflow: hidden; text-overflow:ellipsis;}
+	#droppable .droppable_preview a{float: left; width: 100%; height: 20px; text-align: center; font-size: 14px; font-weight: bold;}
+
+
+
+
